--- a/index.html
+++ b/index.html
@@ -617,35 +617,51 @@
                       fraldas descartáveis, preservativos, entre outros ...
                       <br />
                       <br />
+                      <span id="more"> 
+                        <h5><span style="color: #04aa6d">O Metal</span></h5>
 
-                      <h5><span style="color: #04aa6d">O Metal</span></h5>
+                        Reciclamos muito metal aqui no Brasil, somos um dos
+                        maiores recicladores de metal: <br />
 
-                      Reciclamos muito metal aqui no Brasil, somos um dos
-                      maiores recicladores de metal: <br />
+                        Latinhas de alumínio, pregos, parafusos, panelas, latas
+                        de aço, produtos de ferro, bronze, metais em geral,
+                        cobre, bronze, entre outros <br />
 
-                      Latinhas de alumínio, pregos, parafusos, panelas, latas de
-                      aço, produtos de ferro, bronze, metais em geral, cobre,
-                      bronze, entre outros <br />
+                        Metais que não reciclamos: <br />
 
-                      Metais que não reciclamos: <br />
+                        Esponja de aço, marmitas de alumínio, clipes, grampos
+                        entre outros ... <br />
+                        <br />
 
-                      Esponja de aço, marmitas de alumínio, clipes, grampos
-                      entre outros ... <br />
-                      <br />
+                        <h5><span style="color: #04aa6d">O Vidro</span></h5>
 
-                      <h5><span style="color: #04aa6d">O Vidro</span></h5>
+                        O vidro é 100% reciclável, a sua reciclagem é muito
+                        importante para a natureza. Veja alguns exemplos: <br />
 
-                      O vidro é 100% reciclável, a sua reciclagem é muito
-                      importante para a natureza. Veja alguns exemplos: <br />
+                        Garrafas, potes em geral, garrafões, frascos de limpeza,
+                        vidros de perfume etc. <br />
 
-                      Garrafas, potes em geral, garrafões, frascos de limpeza,
-                      vidros de perfume etc. <br />
+                        Vidros que não reciclamos:<br />
 
-                      Vidros que não reciclamos:<br />
-
-                      Espelho, cristal, louça, vidros temperados, cerâmica entre
-                      outros ... <br />
-                      <br />
+                        Espelho, cristal, louça, vidros temperados, cerâmica
+                        entre outros ... <br />
+                        <br
+                      /></span>
+                      <button type="button" class="btn btn-common" id="read" onclick="read()">Leia Mais</button>
+                      <script type="text/javascript">
+                      var i=0;
+  function read(){
+if(!i){
+  document.getElementById("more").style.display = "inline";
+  document.getElementById("read").innerHTML="Ocultar";
+  i=1;
+} else{
+  document.getElementById("more").style.display = "none";
+  document.getElementById("read").innerHTML="Leia Mais";
+  i=0;
+}
+  }
+                      </script>
                     </div>
                   </div>
                 </div>
@@ -688,18 +704,18 @@
                         >
                       </h5>
 
-                      <span style="color: #04aa6d">1 )</span> Com a ajuda de um
+                      <span style="color: #04aa6d">1)</span> Com a ajuda de um
                       funil coloque óleo frio em uma garrafa pet; <br />
 
-                      <span style="color: #04aa6d">2 )</span> Feche bem a
+                      <span style="color: #04aa6d">2)</span> Feche bem a
                       garrafa assim que estiver cheia e em seguida reserve;
                       <br />
 
-                      <span style="color: #04aa6d">3 )</span> Retire o excesso
+                      <span style="color: #04aa6d">3)</span> Retire o excesso
                       de óleo da panela com uma folha de papel toalha (depois
                       descarte o papel toalha no lixo orgânico); <br />
 
-                      <span style="color: #04aa6d">4 )</span> Leve a garrafa Pet
+                      <span style="color: #04aa6d">4)</span> Leve a garrafa Pet
                       com o óleo descartado e armazenado no ponto de coleta
                       seletiva ou reciclável do seu condomínio; <br />
 
