--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                       fraldas descartáveis, preservativos, entre outros ...
                       <br />
                       <br />
-                      <span id="more"> 
+                      <span id="more">
                         <h5><span style="color: #04aa6d">O Metal</span></h5>
 
                         Reciclamos muito metal aqui no Brasil, somos um dos
@@ -647,20 +647,33 @@
                         entre outros ... <br />
                         <br
                       /></span>
-                      <button type="button" class="btn btn-common" id="read" onclick="read()">Leia Mais</button>
+                      <button
+                        type="button"
+                        class="btn btn-common"
+                        id="read"
+                        onclick="read()"
+                      >
+                        Leia Mais
+                      </button>
                       <script type="text/javascript">
-                      var i=0;
-  function read(){
-if(!i){
-  document.getElementById("more").style.display = "inline";
-  document.getElementById("read").innerHTML="Ocultar";
-  i=1;
-} else{
-  document.getElementById("more").style.display = "none";
-  document.getElementById("read").innerHTML="Leia Mais";
-  i=0;
-}
-  }
+                        var i = 0;
+                        document.getElementById("more").style.display = "none";
+                        document.getElementById("read").innerHTML = "Leia Mais";
+                        function read() {
+                          if (!i) {
+                            document.getElementById("more").style.display =
+                              "inline";
+                            document.getElementById("read").innerHTML =
+                              "Ocultar";
+                            i = 1;
+                          } else {
+                            document.getElementById("more").style.display =
+                              "none";
+                            document.getElementById("read").innerHTML =
+                              "Leia Mais";
+                            i = 0;
+                          }
+                        }
                       </script>
                     </div>
                   </div>
@@ -707,12 +720,12 @@ if(!i){
                       <span style="color: #04aa6d">1)</span> Com a ajuda de um
                       funil coloque óleo frio em uma garrafa pet; <br />
 
-                      <span style="color: #04aa6d">2)</span> Feche bem a
-                      garrafa assim que estiver cheia e em seguida reserve;
+                      <span style="color: #04aa6d">2)</span> Feche bem a garrafa
+                      assim que estiver cheia e em seguida reserve;
                       <br />
 
-                      <span style="color: #04aa6d">3)</span> Retire o excesso
-                      de óleo da panela com uma folha de papel toalha (depois
+                      <span style="color: #04aa6d">3)</span> Retire o excesso de
+                      óleo da panela com uma folha de papel toalha (depois
                       descarte o papel toalha no lixo orgânico); <br />
 
                       <span style="color: #04aa6d">4)</span> Leve a garrafa Pet
